# Shipica.github.io

./: .gitignore  LICENSE  README.md  index.html
shipico/: Cargo.toml  README.md  package.json  webpack.config.js
shipico/deploy/: gl.js  index.html
shipico/fake_web_sys/: Cargo.toml
shipico/fake_web_sys/src/: fake_web_sys.rs  lib.rs
shipico/miniquad/: Cargo.toml
shipico/miniquad/src/: graphics.rs
shipico/src/: canvas.rs  lib.rs  macros.rs  main.rs
shipico/src/math/: arc_segment.rs  color.rs  ellipse.rs  line.rs  matrix3x2.rs  point.rs  quad_bezier_segment.rs  rounded_rect.rs  triangle.rs
shipico/src/old/: capabilities.rs  function.rs  input.rs  old_lib.rs  params.rs  temp_styles.rs  tree.rs  ui.rs
shipico/src/old/math/: bezier_segment.rs  mod.rs  rect.rs  size.rs  thickness.rs  vec2.rs
shipico/src/old/math/color/: trie.rs
shipico/src/old/shader/: default.vert
shipico/src/old/widget/: collection.rs  common.rs
shipico/src/old/widget/style/: mod.rs
shipico/src/shader/: default.frag  default.vert  mod.rs  post_process.frag  post_process.vert  workbench.frag  workbench.vert
shipico/src/widget/: mod.rs  shape.rs
shipico/static/: index.html
shipico/tests/: app.rs
