# You must change these to your own details.
[package]
name = "wasm"
description = "My super awesome Rust, WebAssembly, and Webpack project!"
version = "0.1.0"
authors = ["You <you@example.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[features]
# If you uncomment this line, it will enable `wee_alloc`:
#default = ["wee_alloc"]

[dependencies]

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. However, it is slower than the default
# allocator, so it's not enabled by default.
wee_alloc = { version = "0.4.5", optional = true }
once_cell = "1.5.2"
paste = "1.0.3"
miniquad = {version = "0.3.0-alpha.22", git = "https://github.com/not-fl3/miniquad", features = ["log-impl"]}
# miniquad = {version = "0.3.0-alpha.22", path = "miniquad", features = ["log-impl"]}
quad-rand = "0.1.1"
glam = {version = "0.11.2", features = ["scalar-math"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"
